--- a/app.json
+++ b/app.json
@@ -1,19 +1,25 @@
 {
   "expo": {
-    "name": "sonyApp",
-    "slug": "sonyApp",
+    "name": "SonyEvent",
+    "slug": "SonyEvent",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/sony.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/images/sony.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#0a6561"
+    },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.tawhidjony.sonyApp"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/sony.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.tawhidjony.sonyApp"
@@ -21,14 +27,14 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/sony.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/sony.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
