--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-query-devtools": "^5.65.0",
     "axios": "^1.7.9",
     "expo": "~52.0.26",
     "expo-blur": "~14.0.2",
