--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "splash": {
       "image": "./assets/images/sony.png",
       "resizeMode": "contain",
-      "backgroundColor": "#0a6561"
+      "backgroundColor": "#0086ff"
     },
     "ios": {
       "supportsTablet": true,
